--- a/src/css/question.css
+++ b/src/css/question.css
@@ -280,3 +280,216 @@ a:hover {
 .hr-email{
     display: none;
 }
+
+
+/** 滚动 **/
+
+.switch-main{
+    width: 52px;
+    /*height: 21px;*/
+    height: 30px;
+    border-radius: 4px;
+    background: #ffffff;
+
+
+    padding: 3px;
+    float: right;
+
+    -webkit-transition: background 0.5s ease;
+    transition: background 0.5s ease;
+
+}
+.switch-wrap{
+
+    height: 30px;
+    background: #ffffff;
+}
+.switch-main > div{
+    height: inherit;
+    text-align: center;
+}
+.switch-main.success{
+    background: #90cd00;
+}
+.switch-main.error{
+    background: #ff6552;
+}
+.switch-left{
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    width: 50%;
+
+    float: left;
+}
+.switch-right{
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    width: 50%;
+    float: left;
+}
+
+.icon-true{
+    background-position: 0  -343.5px;
+    width: 12.5px;
+    height: 9.5px;
+
+    position: relative;
+    top: 0px;
+}
+
+.icon-false{
+    background-position: -12.5px  -343.5px;
+    width: 12.5px;
+    height: 9.5px;
+    position: relative;
+    top: -1px;
+}
+.switch-paper{
+    display: inline-block;
+    position: absolute;
+    z-index: 2;
+    padding: 0px 12px;
+    background: #ffffff;
+
+    border-radius: 4px;
+
+    -webkit-transition: -webkit-transform 0.3s ease;
+    transition: transform 0.3s ease;
+
+    -webkit-transform : translateX(28px);
+    transform : translateX(28px);
+
+}
+
+.topic-option-name{
+    /*margin-right: 20px;*/
+    width: 204px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*
+ * Flex布局(移动端推荐+)
+ * 子元素设置了 固定宽度, 按照总宽度减去设计宽度  然后再按照比例来进行分配
+ * 例如 :  子元素A : flex 1  子元素B : flex 3;   总宽度 : 1000px   则 A = 1/4 = 250PX  B = 3/4 = 750PX
+ * 例如 :  子元素A : 200px;  子元素B : flex 2;   子元素C : flex 3  则 1000-200 = 800PX  A = 2/5 = 320px B = 3/5 = 480px;
+ */
+.flex{
+    display: box;
+    display: -ms-box;
+    display: -webkit-box;    /** 旧语法 **/
+    display: flex;           /** 新语法 **/
+    display: -ms-flexbox;
+    display: -webkit-flex;   /** 新语法 **/
+}
+
+.flex-1{
+    display: block;
+    flex: 1;
+    -ms-flex: 1;
+    -webkit-flex: 1;
+    box-flex: 1;
+    -ms-box-flex: 1;
+    -webkit-box-flex: 1;
+}
+
+.flex-2{
+    display: block;
+    flex: 2;
+    -ms-flex: 2;
+    -webkit-flex: 2;
+    box-flex: 2;
+    -ms-box-flex: 2;
+    -webkit-box-flex: 2;
+}
+
+.flex-3{
+    display: block;
+    flex: 3;
+    -ms-flex: 3;
+    -webkit-flex: 3;
+    box-flex: 3;
+    -ms-box-flex: 3;
+    -webkit-box-flex: 3;
+}
+
+.flex-4{
+    display: block;
+    flex: 4;
+    -ms-flex: 4;
+    -webkit-flex: 4;
+    box-flex: 4;
+    -ms-box-flex: 4;
+    -webkit-box-flex: 4;
+}
+.flex-5{
+    display: block;
+    flex: 5;
+    -ms-flex: 5;
+    -webkit-flex: 5;
+    box-flex: 5;
+    -ms-box-flex: 5;
+    -webkit-box-flex: 5;
+}
+.flex-6{
+    display: block;
+    flex: 6;
+    -ms-flex: 6;
+    -webkit-flex: 6;
+    box-flex: 6;
+    -ms-box-flex: 6;
+    -webkit-box-flex: 6;
+}
+.flex-7{
+    display: block;
+    flex: 7;
+    -ms-flex: 7;
+    -webkit-flex: 7;
+    box-flex: 7;
+    -ms-box-flex: 7;
+    -webkit-box-flex: 7;
+}
+.flex-8{
+    display: block;
+    flex: 8;
+    -ms-flex: 8;
+    -webkit-flex: 8;
+    box-flex: 8;
+    -ms-box-flex: 8;
+    -webkit-box-flex: 8;
+}
+.flex-9{
+    display: block;
+    flex: 9;
+    -ms-flex: 9;
+    -webkit-flex: 9;
+    box-flex: 9;
+    -ms-box-flex: 9;
+    -webkit-box-flex: 9;
+}
