--- a/src/css/an.css
+++ b/src/css/an.css
@@ -1,3 +1,43 @@
+.font-mm{
+    -webkit-animation: bounceInDown  1s ease 0.3s 1 both;
+}
+.bg-circle-xy{
+    /*-webkit-animation: zoomIn  0.5s ease 1.5s 1 both;*/
+}
+.font-yu{
+    -webkit-animation: lightSpeedIn  0.8s ease 1.5s 1 both;
+}
+.font-say-delay{
+    -webkit-animation: typeWriter  1.6s linear 2.4s 1 both;
+}
+.circle-dot{
+    -webkit-animation: fadeIn  1s ease 4.6s 1 both;
+}
+.heart{
+    -webkit-animation: swing  0.6s ease 4.6s 1 both;
+}
+.font-say-delay{
+    position: absolute;
+    z-index: 3;
+    width: 172.5px;
+    height: 27.5px;
+    background: #ea245d;
+    display: inline-block;
+    top: 9px;
+
+}
+@-webkit-keyframes typeWriter{
+    0%{
+        -webkit-transform: translateX(0px);
+    }
+
+    100%{
+        -webkit-transform: translateX(173px);
+    }
+
+}
+
+
 /** 第一阶段动画 **/
 .left-decor {
     -webkit-animation: slideInLeft 0.5s ease 0.3s 1 both;
