--- a/src/css/index.css
+++ b/src/css/index.css
@@ -73,28 +73,34 @@
 
 .arrow {
     position: absolute;
-    bottom: 6px;
+    bottom: 12px;
     left: 50%;
-    margin-left: -8px;
+    margin-left: -14.5px;
 
     -webkit-animation: pointUp  1.2s ease-in 0s infinite;
 }
 
 .icon {
     background-image: url("../../imgs/icon.png");
-    background-size: 64px 64px;
+    background-size: 58px 17px;
 }
 .icon-arrow {
-    width: 16px;
-    height: 16px;
-    background-position: 0 -16px;
+    width: 29px;
+    height: 17px;
+    background-position: 0  0px;
 }
 
-.women{
-    background-position:  0 -225.5px;
-    width: 82px;
-    height: 121px;
+.icon-arrow-inv {
+    width: 29px;
+    height: 17px;
+    background-position: -29px 0px;
 }
+
+/*.women{*/
+    /*background-position:  0 -225.5px;*/
+    /*width: 82px;*/
+    /*height: 121px;*/
+/*}*/
 
 .heart{
     background-position:  -89px -225.5px;
@@ -168,6 +174,14 @@
     border: 5px solid #ea245d;
     border-radius: 80px;
 
+}
+
+.circle-middle-wo{
+    position: relative;
+    top: 25px;
+    background-position:  -327px 0;
+    width: 152px;
+    height: 153px;
 }
 
 
