--- a/src/css/an.css
+++ b/src/css/an.css
@@ -1,20 +1,26 @@
 .font-mm{
     -webkit-animation: bounceInDown  1s ease 0.8s 1 both;
+    animation: bounceInDown  1s ease 0.8s 1 both;
 }
 .bg-circle-xy{
     -webkit-animation: zoomIn  0.6s ease 0.3s 1 both;
+    animation: zoomIn  0.6s ease 0.3s 1 both;
 }
 .font-yu{
     -webkit-animation: lightSpeedIn  0.8s ease 1.8s 1 both;
+    animation: lightSpeedIn  0.8s ease 1.8s 1 both;
 }
 .font-say-delay{
     -webkit-animation: typeWriter  1.6s linear 2.4s 1 both;
+    animation: typeWriter  1.6s linear 2.4s 1 both;
 }
 .circle-dot{
     -webkit-animation: fadeIn  1s ease 4.6s 1 both;
+    animation: fadeIn  1s ease 4.6s 1 both;
 }
 .heart{
     -webkit-animation: swing  0.6s ease 4.6s 1 both;
+    animation: swing  0.6s ease 4.6s 1 both;
 }
 
 .font-say-delay{
@@ -27,32 +33,34 @@
     top: 10px;
     left:50%;
     margin-left: -86px;
-
-
-
 }
 
 
 
 /** 第二图 **/
-.circle-middle{
+.circle-middle,.circle-middle-wo{
     -webkit-animation: rollIn  0.6s ease  0.3s 1 both;
+    animation: rollIn  0.6s ease  0.3s 1 both;
 }
 
 
 
 .font-xy-who    ,   .font-why-mm{
     -webkit-animation: fadeIn  0.6s ease  1.4s 1 both;
+    animation: fadeIn  0.6s ease  1.4s 1 both;
 }
 
 #gameStart{
     -webkit-animation: fadeIn  1s ease  4.6s 1 both;
+    animation: fadeIn  1s ease  4.6s 1 both;
 }
 .list-info>li:nth-child(1){
     -webkit-animation: fadeInLeft  0.5s ease   2s 1 both;
+    animation: fadeInLeft  0.5s ease   2s 1 both;
 }
 .list-info>li:nth-child(2){
     -webkit-animation: fadeInLeft  0.6s ease   2.6s 1 both;
+    animation: fadeInLeft  0.6s ease   2.6s 1 both;
 }
 .list-info>li:nth-child(3){
     -webkit-animation: fadeInLeft  0.6s ease   3.2s 1 both;
@@ -60,14 +68,17 @@
 
 .list-info>li:nth-child(4){
     -webkit-animation: fadeInLeft  0.6s ease   3.8s 1 both;
+    animation: fadeInLeft  0.6s ease   3.8s 1 both;
 }
 
 .list-info>li:nth-child(5){
     -webkit-animation: fadeInLeft  0.6s ease    4.4s 1 both;
+    animation: fadeInLeft  0.6s ease    4.4s 1 both;
 }
 
 .list-info>li:nth-child(6){
     -webkit-animation: fadeInLeft  0.6s ease   5.2s 1 both;
+    animation: fadeInLeft  0.6s ease   5.2s 1 both;
 }
 
 
@@ -96,330 +107,3 @@
 }
 
 
-/** 第一阶段动画 **/
-.left-decor {
-    -webkit-animation: slideInLeft 0.5s ease 0.3s 1 both;
-}
-
-.right-decor {
-    -webkit-animation: slideInRight 0.5s ease 0.3s 1 both;
-}
-
-#trinagle-list-01 {
-    -webkit-animation: slideInUp 0.5s ease 1.5s 1 both;
-}
-
-#trinagle-list-02 {
-    -webkit-animation: slideInUp 0.5s ease 0.8s 1 both;
-}
-
-#trinagle-list-03 {
-    -webkit-animation: slideInRight 0.5s ease 1s 1 both;
-}
-
-.center-title {
-    -webkit-animation: fadeInDown 0.8s ease 1.5s 1 both;
-}
-
-.f2 .left-decor {
-    -webkit-animation: slideOutLeft 0.5s ease 0s 1 both;
-}
-
-.f2 .right-decor {
-    -webkit-animation: slideOutRight 0.5s ease 0s 1 both;
-}
-
-.f2 .center-title {
-    -webkit-animation: fadeOut 0.8s ease 0s 1 both;
-}
-
-#trinagleRed {
-    -webkit-animation-name: hinge-my;
-    -webkit-animation-duration: 2.3s;
-    -webkit-animation-delay: 2.8s;
-    -webkit-animation-fill-mode: both;
-    z-index: 999;
-}
-
-.scaleBug {
-
-}
-
-.fadeAni {
-    -webkit-animation: zoomIn 0.2s ease 0s 1 both;
-}
-
-.f2 #trinagle-list-05 {
-
-}
-
-/** 第一阶段动画 **/
-
-/** 第二阶段动画 **/
-
-@-webkit-keyframes hinge-my {
-    0% {
-        opacity: 0;
-        -webkit-transform-origin: top left;
-        transform-origin: top left;
-        -webkit-animation-timing-function: ease-in-out;
-        animation-timing-function: ease-in-out;
-    }
-    10% {
-        opacity: 1;
-    }
-
-    20%, 60% {
-
-        -webkit-transform: rotate3d(0, 0, 1, 80deg);
-        transform: rotate3d(0, 0, 1, 80deg);
-        -webkit-transform-origin: top left;
-        transform-origin: top left;
-        -webkit-animation-timing-function: ease-in-out;
-        animation-timing-function: ease-in-out;
-    }
-
-    40%, 80% {
-        -webkit-transform: rotate3d(0, 0, 1, 60deg);
-        transform: rotate3d(0, 0, 1, 60deg);
-        -webkit-transform-origin: top left;
-        transform-origin: top left;
-        -webkit-animation-timing-function: ease-in-out;
-        animation-timing-function: ease-in-out;
-        opacity: 1;
-    }
-
-    100% {
-        -webkit-transform: translate3d(-80px, 300px, 0) scale(20);
-        transform: translate3d(-80px, 300px, 0) scale(20);
-    }
-}
-
-@keyframes hinge-my {
-    0% {
-        opacity: 0;
-        -webkit-transform-origin: top left;
-        transform-origin: top left;
-        -webkit-animation-timing-function: ease-in-out;
-        animation-timing-function: ease-in-out;
-    }
-    10% {
-        opacity: 1;
-    }
-
-    20%, 60% {
-
-        -webkit-transform: rotate3d(0, 0, 1, 80deg);
-        transform: rotate3d(0, 0, 1, 80deg);
-        -webkit-transform-origin: top left;
-        transform-origin: top left;
-        -webkit-animation-timing-function: ease-in-out;
-        animation-timing-function: ease-in-out;
-    }
-
-    40%, 80% {
-        -webkit-transform: rotate3d(0, 0, 1, 60deg);
-        transform: rotate3d(0, 0, 1, 60deg);
-        -webkit-transform-origin: top left;
-        transform-origin: top left;
-        -webkit-animation-timing-function: ease-in-out;
-        animation-timing-function: ease-in-out;
-        opacity: 1;
-    }
-
-    100% {
-        -webkit-transform: translate3d(-80px, 300px, 0) scale(20);
-        transform: translate3d(-80px, 300px, 0) scale(20);
-    }
-}
-
-@-webkit-keyframes arrowRight {
-    0% {
-        opacity: 0;
-        -webkit-transform: translateX(10px);
-        transform: translateX(10px);
-    }
-    40% {
-        opacity: 1;
-        -webkit-transform: translateX(4px);
-        transform: translateX(4px);
-    }
-    100% {
-        opacity: 0;
-        -webkit-transform: translateX(-4px);
-        transform: translateX(-4px);
-    }
-}
-
-@keyframes arrowRight {
-    0% {
-        opacity: 0;
-        -webkit-transform: translateX(10px);
-        transform: translateX(10px);
-    }
-    40% {
-        opacity: 1;
-        -webkit-transform: translateX(4px);
-        transform: translateX(4px);
-    }
-    100% {
-        opacity: 0;
-        -webkit-transform: translateX(-4px);
-        transform: translateX(-4px);
-    }
-}
-
-.arrowRight {
-    -webkit-animation: arrowRight 1.2s ease-in 2.5s infinite;
-    animation: arrowRight 1.2s ease-in 2.5s infinite;
-}
-
-/** 第二阶段动画 **/
-
-/** 第三阶段动画 **/
-.title-list .title-01 {
-    -webkit-animation: bounceInLeft 0.5s ease 0.5s 1 both;
-    animation: bounceInLeft 0.5s ease 0.5s 1 both;
-}
-
-.title-list .title-02 {
-    -webkit-animation: bounceInRight 0.5s ease 1s 1 both;
-    animation: bounceInRight 0.5s ease 1s 1 both;
-}
-
-.title-list .title-03 {
-    -webkit-animation: bounceInLeft 0.5s ease 1.5s 1 both;
-    animation: bounceInLeft 0.5s ease 1.5s 1 both;
-}
-
-.title-list .title-04 {
-    -webkit-animation: bounceInRight 0.5s ease 2s 1 both;
-    animation: bounceInRight 0.5s ease 2s 1 both;
-}
-
-/** 第三阶段动画 **/
-
-/** 第四阶段动画 **/
-.bg-response {
-    -webkit-animation: fadeInAndOut 2s linear 0.3s 1 both;
-    animation: fadeInAndOut 2s linear 0.3s 1 both;
-}
-
-.paper-trin.paper-01 {
-    -webkit-animation: skew-left-zhe 0.6s ease 2.2s 1 both;
-}
-
-.paper-trin.paper-03 {
-    -webkit-animation: skew-right-zhe 0.6s ease 3s 1 both;
-
-}
-
-#left-content {
-    -webkit-animation: slideInDown 0.6s ease 1.3s 1 both;
-}
-
-#nav-trinagle-main {
-    -webkit-animation: bounceInRight-my 1.3s ease 0s 1 ;
-}
-
-.scaleDom {
-    -webkit-animation: scaleDom 1.3s linear 0s 1 backwards ;
-}
-
-@-webkit-keyframes scaleDom {
-    0% {
-        -webkit-transform: translateX(0) scale(1);
-        -transform: translateX(0) scale(1);
-    }
-
-    20% {
-
-    }
-
-    100% {
-        -webkit-transform: translateX(100%) scale(0.5);
-        -transform: translateX(100%) scale(0.5);
-
-    }
-}
-
-@-webkit-keyframes skew-left-zhe {
-    0% {
-
-        -webkit-transform:translateZ(0) skewX(0deg);
-        transform:translateZ(0) skewX(0deg);
-    }
-
-    100% {
-
-        -webkit-transform:translateZ(0) skewX(60deg);
-        transform:translateZ(0) skewX(60deg);
-    }
-}
-
-@-webkit-keyframes fadeInAndOut {
-    0% {
-
-        opacity: 0;
-    }
-    20% {
-        opacity: 1;
-    }
-
-    80% {
-        opacity: 1;
-    }
-
-    100% {
-
-        opacity: 0;
-    }
-}
-
-@-webkit-keyframes skew-right-zhe {
-    0% {
-
-        -webkit-transform: translateZ(0) skewX(0deg);
-        transform:translateZ(0) skewX(0deg);
-    }
-
-    100% {
-
-        -webkit-transform:translateZ(0) skewX(-60deg);
-        transform: translateZ(0)    skewX(-60deg);
-
-    }
-}
-
-/** 第四阶段动画 **/
-
-
-@-webkit-keyframes bounceInRight-my {
-    0%, 60%, 75%, 90%, 100% {
-        -webkit-transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
-        transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
-    }
-
-    0% {
-        opacity: 0;
-        -webkit-transform: translate3d(3000px, 0, 0)rotateZ(30deg) scale(1.3);
-        transform: translate3d(3000px, 0, 0)    rotateZ(30deg) scale(1.3);
-    }
-
-    60% {
-        opacity: 1;
-        -webkit-transform: translate3d(-25px, 0, 0) rotateZ(30deg) scale(1.3);
-        transform: translate3d(-25px, 0, 0)rotateZ(30deg) scale(1.3);
-    }
-
-    75% {
-        -webkit-transform: translate3d(10px, 0, 0)rotateZ(30deg) scale(1.3);
-        transform: translate3d(10px, 0, 0)rotateZ(30deg) scale(1.3);
-    }
-
-    100% {
-        -webkit-transform: translate3d(0px, 0, 0) rotateZ(30deg) scale(1.3);
-        transform:  translate3d(0px, 0, 0) rotateZ(30deg) scale(1.3);
-    }
-
-}
